--- a/리드미꾸미기.ipynb
+++ b/리드미꾸미기.ipynb
@@ -1,16 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef629e87",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "aaed891e",
+   "id": "2bc45370",
    "metadata": {},
    "source": [
     "![header](https://capsule-render.vercel.app/api?type=cylinder&color=30:B296FF,50:C1D2DC&height=150&text=Hello!%20I'm%20Maddie&animation=fadeIn&fontColor=FFFFFF&fontSize=40)"
@@ -18,39 +10,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9be4ebdd",
+   "id": "cf4e923a",
    "metadata": {},
    "source": [
-    "## ABOUT ME"
+    "# ABOUT ME"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8f61e359",
+   "id": "7c5fa23f",
    "metadata": {},
    "source": [
-    "> 안녕하세요 ESTsoft WASSUP2기를 교육받고 있는 심현정 교육생입니다. 지속적인 성장을 하는 \"기획자\"를 꿈꾸고 있습니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0888ed6f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3ec8503c",
-   "metadata": {},
-   "source": [
-    "## CONTACT ME"
+    "> 안녕하세요.지속적인 성장을 하는 \"기획자\"를 꿈꾸고 있는 Maddie 입니다. \n",
+    "전세계를 돌아다니면서 새로운 도전을 하며 살아가는 것 또한 제 꿈입니다. 글로벌 인재가 되는 그 날까지..!"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "77e2d619",
+   "id": "1f5b4aaf",
+   "metadata": {},
+   "source": [
+    "# CONTACT ME\n",
+    "-----------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e9d8840",
    "metadata": {},
    "source": [
     "<a href='https://www.instagram.com/shimn_/' target=\"_blank\"><img src = 'https://img.shields.io/badge/Instagram-E4405F?style=for-the-badge&logo=instagram&logoColor=white'></a><a href='https://github.com/Maddie314/wassup2.git' target=\"_blank\"><img src = 'https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white'></a>\n"
@@ -58,15 +44,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6d5daf4",
+   "id": "0a24e1d8",
    "metadata": {},
    "source": [
-    "## TOOLS & SKILLS"
+    "![Alt text](https://windowscustomization.com/wp-content/uploads/2019/10/Lost-in-Space.gif)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "462dcbf2",
+   "id": "bffb8fcb",
+   "metadata": {},
+   "source": [
+    "# TOOLS & SKILLS\n",
+    "--------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47b71dfe",
    "metadata": {},
    "source": [
     "<img src = 'https://img.shields.io/badge/MySQL-00000F?style=for-the-badge&logo=mysql&logoColor=white'> <img src = 'https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white'> <img src ='https://img.shields.io/badge/Figma-F24E1E?style=for-the-badge&logo=figma&logoColor=white'> <img src ='https://img.shields.io/badge/Miro-050038?style=for-the-badge&logo=Miro&logoColor=white'> <img src ='https://img.shields.io/badge/Notion-000000?style=for-the-badge&logo=notion&logoColor=white'>"
@@ -74,15 +69,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89a2ca9d",
+   "id": "53c462c9",
    "metadata": {},
    "source": [
-    "## STUDY"
+    "# STUDY \n",
+    "------------"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2dec5496",
+   "id": "0d0b410e",
    "metadata": {},
    "source": [
     "<a href='https://www.notion.so/oreumi/6a8a77b182a046e39bf3d00617e28b90?pvs=4' target=\"_blank\"><img src = 'https://img.shields.io/badge/Notion-000000?style=for-the-badge&logo=notion&logoColor=white'></a>"
@@ -90,21 +86,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b3e0754",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "18cbb9a9",
+   "id": "a70bbf88",
    "metadata": {},
    "source": [
-    "## PROJECT EXPERIENCES"
+    "<br />"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9602ed92",
+   "id": "82e8a34c",
+   "metadata": {},
+   "source": [
+    "# PROJECT EXPERIENCES\n",
+    "-----------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19981331",
+   "metadata": {},
+   "source": [
+    "**2024.02~2024.06 ESTsoft AI서비스 기획 WASSUP 2기**\n",
+    "* 프로젝트 1\n",
+    "* 프로젝트 2\n",
+    "* 프로젝트 3\n",
+    "* 프로젝트 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab77a0db",
    "metadata": {},
    "source": [
     "**2023.06 ~ 2023.12 메타버스 아카데미 2기 콘텐츠 기획**\n",
@@ -116,45 +127,37 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e15da29",
+   "id": "ae30baef",
    "metadata": {},
    "source": [
-    "**2022.01~ 2022.06 E-LAND CHINA 이커머스 인턴**\n",
+    "**2022.01~ 2022.06 E-LAND CHINA 틱톡 프로젝트 인턴**\n",
     "* 틱톡 숏폼 콘텐츠 기획\n",
     "* 틱톡 라이브 방송 상품 및 데이터 관리"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b2952b24",
+   "id": "8112c9b2",
    "metadata": {},
    "source": [
-    "## GITHUB STATUS"
+    "------------------------"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "67433281",
+   "id": "4c1d02f4",
+   "metadata": {},
+   "source": [
+    "# GITHUB STATUS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63c4dd8e",
    "metadata": {},
    "source": [
     "![Maddie314's github stats](https://github-readme-stats.vercel.app/api?username=[Maddie314&show_icons=true&theme=tokyonight)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "907f50e8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e79a769b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
