숙제 올리기

--- a/python_grammer/00_마크다운.ipynb
+++ b/python_grammer/00_마크다운.ipynb
@@ -199,8 +199,15 @@
    "id": "5c92454d",
    "metadata": {},
    "source": [
-    ">\t>\t> This is a third blockqute.\n",
-    "```"
+    ">\t>\t> This is a third blockqute."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2de068d",
+   "metadata": {},
+   "source": [
+    ">    >    >    > This is a fourth blockqute"
    ]
   },
   {
@@ -214,7 +221,7 @@
     "> ### This is a H3\n",
     "> * List\n",
     ">\t```\n",
-    ">\tcode\n",
+    ">code\n",
     ">\t```"
    ]
   },
@@ -226,10 +233,10 @@
    },
    "source": [
     "> ### This is a H3\n",
-    ">*List\n",
-    ">   '''\n",
-    ">     code\n",
-    ">  '''"
+    ">  * List\n",
+    ">  ```\n",
+    ">  code\n",
+    ">  ```"
    ]
   },
   {
@@ -318,20 +325,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "752b371b",
-   "metadata": {
-    "id": "366e5292"
-   },
-   "source": [
-    "```\n",
-    "* 빨강\n",
-    "    * 녹색\n",
-    "        * 파랑\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "4d4d8af3",
    "metadata": {
     "id": "4d4d8af3"
@@ -347,14 +340,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d2cce2f",
+   "cell_type": "markdown",
+   "id": "cadb8c60",
    "metadata": {
     "id": "2d2cce2f"
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "```\n",
+    "* 도\n",
+    "    * 레\n",
+    "        * 미\n",
+    "\n",
+    "+ 도\n",
+    "    + 레\n",
+    "        + 미\n",
+    "        \n",
+    "- 도\n",
+    "    - 레\n",
+    "        - 미\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e11594b7",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "- 응\n",
+    "* 아니\n",
+    "+ 맞아\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -398,18 +415,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac534b13",
-   "metadata": {
-    "id": "3977da6e"
-   },
+   "id": "44deda19",
+   "metadata": {},
    "source": [
-    "*****\n",
+    "```\n",
     "This is a normal paragraph:\n",
-    "    \n",
     "    This is a code block.\n",
-    "    \n",
-    "end code block.\n",
-    "*****"
+    "end code block\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d658265",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "This is a normal paragraph:\n",
+    "    This is a code block.\n",
+    "end code block\n",
+    "***"
    ]
   },
   {
@@ -435,16 +460,6 @@
     "end code block.\n",
     "*****"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c59b22fe",
-   "metadata": {
-    "id": "c59b22fe"
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -511,23 +526,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43f03729",
-   "metadata": {
-    "id": "03f7529e"
-   },
-   "source": [
-    "```\n",
-    "public class BootSpringBootApplication {\n",
-    "  public static void main(String[] args) {\n",
-    "    System.out.println(\"Hello, Honeymon\");\n",
-    "  }\n",
-    "\n",
-    "}\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "2b7ac88a",
    "metadata": {
     "id": "2b7ac88a"
@@ -584,14 +582,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "595b4ec3",
-   "metadata": {
-    "id": "595b4ec3"
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "id": "fa4cfeef",
+   "metadata": {},
+   "source": [
+    "* * *\n",
+    "***\n",
+    "******\n",
+    "---\n",
+    "--------\n",
+    "- - -\n",
+    "-  -  -"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -643,16 +645,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9281cd5f",
-   "metadata": {
-    "id": "954b6e5e"
-   },
-   "source": [
-    "[Naver](https://naver.com \"naver link\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "72d3745b",
    "metadata": {
     "id": "72d3745b"
@@ -666,14 +658,6 @@
     "* 이메일링크: <address@example.com>\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e6407f7e",
-   "metadata": {
-    "id": "c8f9352b"
-   },
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -699,12 +683,14 @@
     "id": "fa362d24"
    },
    "source": [
-    "*강*   \n",
-    "```\n",
-    "_강조_\n",
-    "```\n",
+    "*강조*  \n",
+    "**강조**\n",
     "***강조***\n",
-    "~cancel~"
+    "_강조_\n",
+    "__강조__\n",
+    "___강조___\n",
+    "~cancel~\n",
+    "~~cancel~~"
    ]
   },
   {
@@ -725,7 +711,7 @@
     "id": "aeb219d6"
    },
    "source": [
-    "문장 중간에 사용할 경우에는 **띄어쓰기**를 사용하는 것이 좋다."
+    "문장 중간에 사용할 경우에는 **띄어쓰기** 를 사용하는 것이 좋다."
    ]
   },
   {
@@ -763,7 +749,7 @@
    "id": "0988f9fd",
    "metadata": {},
    "source": [
-    "<img src='https://www.princeton.edu/sites/default/files/styles/full_2x_crop/public/images/2022/02/KOA_Nassau_2697x1517.jpg?itok=-AEkIq8B'>width=\"200px\" height=\"300px\" title=\"px(픽셀) 크기 설정\" alt=\"dog\"></img>"
+    "<img src='https://www.princeton.edu/sites/default/files/styles/full_2x_crop/public/images/2022/02/KOA_Nassau_2697x1517.jpg?itok=-AEkIq8B' width=\"200px\" height=\"300px\" title=\"px(픽셀) 크기 설정\" alt=\"dog\"></img>"
    ]
   },
   {
@@ -876,6 +862,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9967e09c",
+   "metadata": {},
+   "source": [
+    "|a|b|c|\n",
+    "|:-|-:|:-:|\n",
+    "|apple|bannas|carrot|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "08613f3a",
    "metadata": {
     "id": "08613f3a"
@@ -981,16 +977,6 @@
     "사칙연산, 분수, 제곱, 루트, 시그마, 로그, 행렬, 극한 등 수학 기호 및 수식 등 을 표현할 수 있다.\n",
     "[블로그 참고](https://velog.io/@d2h10s/LaTex-Markdown-%EC%88%98%EC%8B%9D-%EC%9E%91%EC%84%B1%EB%B2%95)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c7beefd",
-   "metadata": {
-    "id": "5c7beefd"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
