파이썬 150-200과 연습문제

--- a/python_grammer/01_자료형&변수_연습문제_실습용.ipynb
+++ b/python_grammer/01_자료형&변수_연습문제_실습용.ipynb
@@ -41,6 +41,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "70.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "국어 = 80\n",
+    "영어 = 75\n",
+    "수학 = 55\n",
+    "list=[국어, 영어, 수학]\n",
+    "type(list)\n",
+    "sum(list)/len(list)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "3TafgBl9dPiZ"
@@ -91,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "id": "v9EjmVT7p49l"
    },
@@ -100,17 +125,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1988112\n",
+      "881120\n",
       "1068234\n"
      ]
     }
    ],
    "source": [
     "pin = '881120-1068234'\n",
-    "yyyymmdd = '19'+pin[:5]\n",
+    "yyyymmdd = pin[:6]\n",
     "num =  pin[-7:]\n",
     "print(yyyymmdd) # 연월일 부분 출력\n",
     "print(num) # 숫자부분 출력"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "881120\n",
+      "1068234\n"
+     ]
+    }
+   ],
+   "source": [
+    "pin = '881120-1068234'\n",
+    "yyyymmdd=pin.split('-')[0]\n",
+    "print(yyyymmdd)\n",
+    "num=pin.split('-')[1]\n",
+    "print(num)"
    ]
   },
   {
@@ -145,6 +192,25 @@
    "source": [
     "pin = \"881120-1068234\"\n",
     "print(pin[-7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "pin = \"881120-1068234\"\n",
+    "num= pin.split(\"-\")[1][0]\n",
+    "print(num)"
    ]
   },
   {
@@ -245,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {
     "id": "oJ7ze-x6p49n"
    },
@@ -254,25 +320,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Life', 'is', 'too', 'short']\n"
+      "Life is too short\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "a = ['Life', 'is', 'too', 'short']\n",
-    "a = str(a)\n",
-    "print(a)\n",
-    "type(a)"
+    "result=\" \".join(a)\n",
+    "print(result)"
    ]
   },
   {
@@ -332,13 +387,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "lccjjP_up49o"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'python'}\n",
+      "{'name': 'python', ('a',): 'python'}\n",
+      "{'name': 'python', ('a',): 'python', 250: 'python'}\n"
+     ]
+    }
+   ],
    "source": [
-    "a = {'name':'python',[1]='python','2'}"
+    "a = dict()\n",
+    "a['name'] = 'python'\n",
+    "print(a)\n",
+    "a[('a',)] = 'python'\n",
+    "print(a)\n",
+    "a[250] = 'python'\n",
+    "print(a)\n",
+    "a[[1]] = 'python' # 딕셔너리의 키로는 변하는(mutable)값을 사용할 수 없다.\n",
+    "print(a)"
    ]
   },
   {
