--- a/python_grammer/02_제어문_연습문제_정답.ipynb
+++ b/python_grammer/02_제어문_연습문제_정답.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "7463e6f8",
-   "metadata": {
-    "id": "7463e6f8"
-   },
+   "metadata": {},
    "source": [
     "# Q1 다음 코드의 결괏값은 무엇일까?\n",
     "```\n",
@@ -20,63 +18,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "6d451981",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "shirt\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = 'Life is too short, you need python'\n",
-    "if 'wife' in a: print('wife')\n",
-    "elif 'python' in a and 'you' not in a : print('python')\n",
-    "elif 'shirt' not in a : print('shirt')\n",
-    "elif 'need' in a: print('need')\n",
-    "else: print('none')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "876ead4f",
+   "execution_count": 13,
+   "id": "ac9b014c",
    "metadata": {
-    "id": "876ead4f"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "shirt\n"
-     ]
+    "ExecuteTime": {
+     "end_time": "2023-10-03T14:43:18.532594Z",
+     "start_time": "2023-10-03T14:43:18.530069Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
-    "a = 'Life is too short, you need python'\n",
-    "if 'wife' in a: \n",
-    "    print('wife')\n",
-    "elif 'python' in a and 'you' not in a : \n",
-    "    print('python')\n",
-    "elif 'shirt' not in a :\n",
-    "    print('shirt')\n",
-    "elif 'need' in a:\n",
-    "    print('need')\n",
-    "else: \n",
-    "    print('none')"
+    "# 거짓이므로 미츨력\n",
+    "# 거짓이므로 미출력\n",
+    "# 참이므로 출력\n",
+    "# 참이지만 실행 안됨"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "5748095d",
-   "metadata": {
-    "id": "5748095d"
-   },
+   "metadata": {},
    "source": [
     "# Q2 while문을 사용해 1부터 1000까지의 자연수 중 3의 배수의 합을 구해 보자.\n",
     "```\n",
@@ -92,10 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "e465d2d1",
+   "execution_count": 5,
+   "id": "7a63198e",
    "metadata": {
-    "id": "e465d2d1"
+    "ExecuteTime": {
+     "end_time": "2023-10-03T14:25:04.726423Z",
+     "start_time": "2023-10-03T14:25:04.722532Z"
+    }
    },
    "outputs": [
     {
@@ -107,11 +71,10 @@
     }
    ],
    "source": [
-    "\n",
     "result = 0\n",
     "i = 1\n",
     "while i <= 1000:\n",
-    "    if i%3 == 0:\n",
+    "    if i % 3 == 0 :  # 3으로 나누어 떨어지는 수는 3의 배수\n",
     "        result += i\n",
     "    i += 1\n",
     "print(result) # 166833 출력"
@@ -120,9 +83,7 @@
   {
    "cell_type": "markdown",
    "id": "7f8a865a",
-   "metadata": {
-    "id": "7f8a865a"
-   },
+   "metadata": {},
    "source": [
     "# Q3 while문을 사용하여 다음과 같이 별(*)을 표시하는 프로그램을 작성해 보자.\n",
     "```\n",
@@ -136,10 +97,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "a10b8c46",
+   "execution_count": 7,
+   "id": "3b1628e6",
    "metadata": {
-    "id": "a10b8c46"
+    "ExecuteTime": {
+     "end_time": "2023-10-03T14:25:04.726423Z",
+     "start_time": "2023-10-03T14:25:04.722532Z"
+    }
    },
    "outputs": [
     {
@@ -155,45 +119,22 @@
     }
    ],
    "source": [
-    "i=0\n",
-    "while i < 5:\n",
-    "    i=i+1\n",
-    "    print(\"*\"*i)\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "006aa3e8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*\n",
-      "**\n",
-      "***\n",
-      "****\n",
-      "*****\n"
-     ]
-    }
-   ],
-   "source": [
-    "i=1\n",
+    "i = 1\n",
     "while i < 6:\n",
-    "    print(\"*\"*i)\n",
-    "    i += 1\n",
-    "   \n",
-    "        "
+    "    print('*'*i)\n",
+    "    i += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "c172d9b2",
-   "metadata": {},
+   "execution_count": 15,
+   "id": "d0a86922",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-03T14:44:08.569123Z",
+     "start_time": "2023-10-03T14:44:08.565112Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -208,20 +149,17 @@
     }
    ],
    "source": [
-    "i=0\n",
-    "while True:\n",
-    "    i +=1\n",
-    "    if i >5 :\n",
-    "        break\n",
+    "i= 0\n",
+    "while True :\n",
+    "    i += 1\n",
+    "    if i > 5: break\n",
     "    print('*'*i)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "2cd6d851",
-   "metadata": {
-    "id": "2cd6d851"
-   },
+   "metadata": {},
    "source": [
     "# Q4 for문을 사용해 1부터 100까지의 숫자를 출력해보자\n",
     "```\n",
@@ -232,10 +170,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "386de29b",
+   "execution_count": 8,
+   "id": "ff703179",
    "metadata": {
-    "id": "386de29b"
+    "ExecuteTime": {
+     "end_time": "2023-10-03T14:26:00.214043Z",
+     "start_time": "2023-10-03T14:26:00.209305Z"
+    }
    },
    "outputs": [
     {
@@ -353,9 +294,7 @@
   {
    "cell_type": "markdown",
    "id": "aad386c0",
-   "metadata": {
-    "id": "aad386c0"
-   },
+   "metadata": {},
    "source": [
     "# Q5 A학급에 총 10명의 학생이 있다. 이 학생들의 중간고사 점수는 다음과 같다.\n",
     "for문을 사용하여 A 학급의 평균 점수를 구해보자.\n",
@@ -371,10 +310,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "6c3fdeb4",
+   "execution_count": 10,
+   "id": "fec6e6db",
    "metadata": {
-    "id": "6c3fdeb4"
+    "ExecuteTime": {
+     "end_time": "2023-10-03T14:30:04.886731Z",
+     "start_time": "2023-10-03T14:30:04.883147Z"
+    }
    },
    "outputs": [
     {
@@ -389,17 +331,15 @@
     "A = [70, 60, 55, 75, 95, 90, 80, 80, 85, 100]\n",
     "total = 0\n",
     "for score in A:\n",
-    "    total += score \n",
-    "average = total/len(A) # 평균을 구하기 위해 총 점수를 총 학생수로 나눈다.\n",
+    "    total += score # A학급의 점수를 모두 더한다.\n",
+    "average = total / len(A) # 평균을 구하기 위해 총 점수를 총 학생수로 나눈다.\n",
     "print(average)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "a84c0728",
-   "metadata": {
-    "id": "a84c0728"
-   },
+   "metadata": {},
    "source": [
     "# Q6 리스트 중에서 홀수에만 2를 곱하여 저장하는 다음 코드가 있다.\n",
     "```\n",
@@ -419,40 +359,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "cf9aee67",
+   "execution_count": 11,
+   "id": "687fef24",
    "metadata": {
-    "id": "cf9aee67"
-   },
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block after 'for' statement on line 3 (2578897494.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[12], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    if n % 2 == 1:\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'for' statement on line 3\n"
-     ]
+    "ExecuteTime": {
+     "end_time": "2023-10-03T14:34:42.671010Z",
+     "start_time": "2023-10-03T14:34:42.666902Z"
     }
-   ],
-   "source": [
-    "```\n",
-    "numbers = [1, 2, 3, 4, 5]\n",
-    "result = []\n",
-    "for n in numbers:\n",
-    "if n % 2 == 1:\n",
-    "    result.append(n*2)\n",
-    "```\n",
-    "위 코드를 리스트 내포(list comprehension)을 사용하여 표현해보자.\n",
-    "numbers = [1, 2, 3, 4, 5]\n",
-    "result = [n*2 for n in numbers if n % 2 == 1]\n",
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "acec57fc",
-   "metadata": {},
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -464,16 +378,14 @@
    ],
    "source": [
     "numbers = [1, 2, 3, 4, 5]\n",
-    "result = [n*2 for n in numbers if n % 2 == 1]\n",
+    "result = [n*2 for n in numbers if n% 2 == 1]\n",
     "print(result)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "d6b526fc",
-   "metadata": {
-    "id": "d6b526fc"
-   },
+   "metadata": {},
    "source": [
     "```\n",
     "\"뭔가 하게 되면 나는 어떤 식으로든 성장한다.\"\n",
@@ -483,9 +395,6 @@
   }
  ],
  "metadata": {
-  "colab": {
-   "provenance": []
-  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
