--- a/python_grammer/파이썬 300제 151-200.ipynb
+++ b/python_grammer/파이썬 300제 151-200.ipynb
@@ -175,6 +175,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "514da095",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dog\n",
+      "Cat\n",
+      "Parrot\n"
+     ]
+    }
+   ],
+   "source": [
+    "리스트 = ['dog', 'cat', 'parrot']\n",
+    "for i in 리스트:\n",
+    "    print(i.capitalize())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 53,
    "id": "c3598eeb",
    "metadata": {},
@@ -407,14 +429,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#165(강의)"
+    "#165(강의) sep='' ->공백 지우기"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 88,
    "id": "0c376342",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -436,6 +460,34 @@
    "source": [
     "for a in range(10):\n",
     "    print(a/10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a7a02ae1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "0.1\n",
+      "0.2\n",
+      "0.3\n",
+      "0.4\n",
+      "0.5\n",
+      "0.6\n",
+      "0.7\n",
+      "0.8\n",
+      "0.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print(\"0.\",i, sep='')"
    ]
   },
   {
@@ -512,7 +564,7 @@
     }
    ],
    "source": [
-    "hab = 0\n",
+    "hab = 0 #변수지정\n",
     "for i in range(1,11):\n",
     "    hab += i\n",
     "print(\"합:\",hab)"
@@ -756,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 11,
    "id": "31b00311",
    "metadata": {},
    "outputs": [
@@ -764,17 +816,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "32100\n",
-      "32150\n",
-      "32000\n",
-      "32500\n"
+      "100 32150\n",
+      "110 32000\n",
+      "120 32500\n"
      ]
     }
    ],
    "source": [
     "price_list = [32100, 32150, 32000, 32500]\n",
     "for a in range(1,4):\n",
-    "    print(90+10*i, price_list[a])"
+    "    print(90+10*a, price_list[a])"
    ]
   },
   {
@@ -898,7 +949,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#177 강적임-- 강의.."
+    "#177 강적임-- 강의..???????????"
    ]
   },
   {
@@ -1417,12 +1468,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#191 소수점 머야"
+    "#191 소수점 머야\n",
+    "#퍼센트 있으면 0.01 한 번 더 곱하기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 16,
    "id": "9b2b4d57",
    "metadata": {},
    "outputs": [
@@ -1432,16 +1484,16 @@
      "text": [
       "2000.28\n",
       "3050.427\n",
-      "2050.2870000000003\n",
+      "2050.287\n",
       "1980.2772\n",
       "7501.05\n",
-      "2050.2870000000003\n",
-      "2050.2870000000003\n",
+      "2050.287\n",
+      "2050.287\n",
       "1980.2772\n",
       "15452.163\n",
       "15052.107\n",
       "15552.177\n",
-      "14902.086000000001\n"
+      "14902.086\n"
      ]
     }
    ],
@@ -1454,7 +1506,7 @@
     "\n",
     "for a in data:\n",
     "    for b in a:\n",
-    "        print(b*1.00014)"
+    "        print(b+(b*0.014*0.01))"
    ]
   },
   {
