--- a/1.Python_Grammer/05_클래스&내장함수_연습문제_실습용.ipynb
+++ b/1.Python_Grammer/05_클래스&내장함수_연습문제_실습용.ipynb
@@ -25,11 +25,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f3345c8c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Calculator:\n",
+    "    def __init__(self):\n",
+    "        self.value = 0\n",
+    "    def add(self, val):\n",
+    "        self.value += val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b6cf859c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class UpgradeCalculator(Calculator):\n",
+    "    def minus(self, val):\n",
+    "        self.value-=val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3f1634a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "cal = UpgradeCalculator()\n",
+    "cal.add(10)\n",
+    "cal.minus(7)\n",
+    "print(cal.value)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -57,11 +96,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d5bc73e1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class MaxLimitCalculator(Calculator):\n",
+    "    def add(self, val):\n",
+    "        self.value += val\n",
+    "        if self.value >100:\n",
+    "            self.value =100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b3777747",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "cal=MaxLimitCalculator()\n",
+    "cal.add(50)\n",
+    "cal.add(60)\n",
+    "\n",
+    "print(cal.value)"
+   ]
   },
   {
    "cell_type": "markdown",
