판다스와 넘파이

--- a/3.Data_Preprocessing/03.04_Pandas 데이터프레임 데이터 조작.ipynb
+++ b/3.Data_Preprocessing/03.04_Pandas 데이터프레임 데이터 조작.ipynb
@@ -48,21 +48,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-06T06:14:50.193481Z",
-     "start_time": "2023-11-06T06:14:49.228227Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +96,8 @@
      "end_time": "2023-11-06T06:15:09.124876Z",
      "start_time": "2023-11-06T06:15:09.116721Z"
     },
-    "school_cell_uuid": "87f90076786847f49036d99249e4ee6a"
+    "school_cell_uuid": "87f90076786847f49036d99249e4ee6a",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -171,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T06:16:10.329644Z",
@@ -248,7 +234,7 @@
        "3  4.0  3.0  4.0  2.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3102,8 +3088,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3175,7 +3163,7 @@
        "4  4  3  4"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3196,6 +3184,26 @@
    },
    "source": [
     "예를 들어 각 열의 최대값과 최소값의 차이를 구하고 싶으면 다음과 같은 람다 함수를 넣는다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.<lambda>(x)>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lambda x: x.max() - x.min()"
    ]
   },
   {
