--- a/3.Data_Preprocessing/01_Numpy.ipynb
+++ b/3.Data_Preprocessing/01_Numpy.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "ba13afdd",
    "metadata": {
     "ExecuteTime": {
@@ -717,7 +717,7 @@
        " 'zeros_like']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,17 +752,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "68f7b26f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "array() missing required argument 'object' (pos 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m np\u001b[38;5;241m.\u001b[39marray()\n",
+      "\u001b[1;31mTypeError\u001b[0m: array() missing required argument 'object' (pos 0)"
+     ]
+    }
+   ],
    "source": [
     "np.array()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "88b22e4d",
    "metadata": {
     "ExecuteTime": {
@@ -777,7 +789,7 @@
        "(array(0), 0, numpy.ndarray)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "e4305d5a",
    "metadata": {
     "ExecuteTime": {
@@ -804,7 +816,7 @@
        "(array([2, 4, 6]), 1, numpy.ndarray)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,28 +1101,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "ccea8c02",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a= np.array([1,3,5,7,9])\n",
-    "a.size"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "id": "550a9897",
    "metadata": {
@@ -1133,28 +1123,6 @@
    ],
    "source": [
     "a = np.array([[1,2,3], [4,5,6]])\n",
-    "a.size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "c3133cdd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a= np.array([[1,2,3],[4,5,6]])\n",
     "a.size"
    ]
   },
