--- a/3.Data_Preprocessing/02_Numpy_Quiz_실습용.ipynb
+++ b/3.Data_Preprocessing/02_Numpy_Quiz_실습용.ipynb
@@ -10,6 +10,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b314e986",
+   "metadata": {},
+   "source": [
+    "Quiz : 1~46까지 구성된 숫자 중에서 6개를 뽑아서 로또 번호를 생성하라"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fe5c458",
+   "metadata": {},
+   "source": [
+    "Quiz : 1~100사이 난수 30개를 추출하여 넘파이 배열을 생성하고, 30보다 크거나 70보다 작은 수를 출력하라"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "822f98fc",
    "metadata": {},
    "source": [
@@ -28,29 +44,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "57a5c6c5-660c-4f82-99a1-a578a300f8cd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1, 5, dtype('<U3'), (5,))"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "arr=np.array(['강아지', '원숭이', '꽃', '45', '100'], dtype='<U3')\n",
-    "arr.ndim, arr.size, arr.dtype, arr.shape"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e1cef698",
    "metadata": {},
@@ -60,28 +53,6 @@
     "\n",
     "array([[1., 1., 1.],\n",
     "       [1., 1., 1.]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "fc428147-8468-487e-96e3-21141f9dfe88",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1., 1., 1.],\n",
-       "       [1., 1., 1.]])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.ones((2,3))"
    ]
   },
   {
@@ -99,32 +70,6 @@
     "       [71, 72, 73, 74, 75],\n",
     "       [76, 77, 78, 79, 80]])\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "f36d1318-abab-4e6a-8ba3-87e71b36d100",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[51, 52, 53, 54, 55],\n",
-       "       [56, 57, 58, 59, 60],\n",
-       "       [61, 62, 63, 64, 65],\n",
-       "       [66, 67, 68, 69, 70],\n",
-       "       [71, 72, 73, 74, 75],\n",
-       "       [76, 77, 78, 79, 80]])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.arange(51,81).reshape(6,5)"
    ]
   },
   {
@@ -148,33 +93,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "200dc541-ca25-4797-a0e8-cec3aae25b4c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([[51., 52., 53., 54., 55.],\n",
-       "        [56., 57., 58., 59., 60.],\n",
-       "        [61., 62., 63., 64., 65.],\n",
-       "        [66., 67., 68., 69., 70.],\n",
-       "        [71., 72., 73., 74., 75.],\n",
-       "        [76., 77., 78., 79., 80.]]),\n",
-       " dtype('float64'))"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.arange(51,81, dtype=float).reshape(6,5), np.arange(51,81, dtype=float).dtype"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "906cf1f4",
    "metadata": {},
@@ -191,34 +109,6 @@
     "\n",
     "array([23, 45, 67,  8,  4,  6])\n",
     "```       "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "id": "90724111-e79d-4da8-a30f-bfa15e788f7e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([23, 45, 67,  8,  4,  6])"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arr=np.array([[ 1,  4,  5,  6],\n",
-    "               [56, 23, 45, 67],\n",
-    "              [ 8,  4,  6, 10]])\n",
-    "\n",
-    "arr2= arr.reshape(-1)\n",
-    "arr2\n",
-    "\n",
-    "arr2[5:-1]"
    ]
   },
   {
@@ -250,30 +140,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "c7cd6fbe-380b-4e29-98f8-902b110a7207",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([10,  2,  3,  4,  5,  6,  7,  0,  0,  0])"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a=np.array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10])\n",
-    "a[0]=10\n",
-    "a[[-1,-2,-3]]=0\n",
-    "a"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "cf265b90",
    "metadata": {},
@@ -291,31 +157,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "0520d5ad-2e3a-4aca-acc5-3f08a08845aa",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[18, 88, 41, 46, 93],\n",
-       "       [31, 85, 52, 77, 53],\n",
-       "       [35, 35, 88, 57, 73],\n",
-       "       [79, 74, 31, 13, 62],\n",
-       "       [89, 49, 49, 42, 37]])"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.random.randint(10,100,(5,5))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "5c5ccecf",
    "metadata": {},
@@ -325,36 +166,6 @@
     "\n",
     "max = 98\n",
     "min = 14"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "id": "54209548-9daf-4b72-aec9-c6c8c60c7c13",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[72 23 81 41 15 76 56]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(81, 15)"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a=np.random.randint(1,101,7)\n",
-    "print(a)\n",
-    "max(a),min(a)"
    ]
   },
   {
@@ -402,63 +213,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "a0442d46-bff4-4b28-b7ff-65ddffd05292",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1,  2,  3, 11, 12, 13, 21, 22, 23],\n",
-       "       [ 4,  5,  6, 14, 15, 16, 24, 25, 26],\n",
-       "       [ 7,  8,  9, 17, 18, 19, 27, 28, 29]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "a = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
-    "b = np.array([[11, 12, 13], [14, 15, 16], [17, 18, 19]])\n",
-    "c = np.array([[21, 22, 23], [24, 25, 26], [27, 28, 29]])\n",
-    "\n",
-    "np.hstack((a,b,c))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "39af255f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1,  2,  3],\n",
-       "       [ 4,  5,  6],\n",
-       "       [ 7,  8,  9],\n",
-       "       [11, 12, 13],\n",
-       "       [14, 15, 16],\n",
-       "       [17, 18, 19],\n",
-       "       [21, 22, 23],\n",
-       "       [24, 25, 26],\n",
-       "       [27, 28, 29]])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.vstack((a,b,c))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "2d8638be",
    "metadata": {},
@@ -482,29 +236,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "03c22039-7e21-48fd-9cba-bec220da6ee2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([96, 64, 53, 70, 66, 51, 76, 81, 72, 56, 94, 77, 61, 92, 75, 83, 52,\n",
-       "       59, 97, 98, 79])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arr = np.random.choice(100, 40, replace=False)\n",
-    "arr[np.where(arr>50)]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "249ef810",
    "metadata": {},
@@ -525,243 +256,6 @@
     "60 '불합격'\n",
     "55 '불합격'\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "id": "306a7066-dc57-4935-bfcb-56c3c1bf3080",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "90"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "kor = np.array( [60,55,70,30,20,90])\n",
-    "kor.max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "d11d3233",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([90])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "kor[kor>= 80]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "83048809",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([90])"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "kor[np.where(kor>= 80)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "8a6d4cd9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([60, 55, 70])"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "kor[(kor >=50) & (kor <= 80)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "4ea83f6c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(54.166666666666664, 54.17)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.average(kor),round(kor.mean(),2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "af8da0d8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "325"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "kor.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "26ebea73",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([60, 55, 70, 90])"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.delete(kor, np.where(kor <= 40))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "995fdab7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([60, 55, 70,  1,  1, 90])"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.where(kor >= 50, kor*1,1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "id": "221c4e5e",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([90, 70, 60])"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.sort(kor)[::-1][:3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "17e923ae",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([5, 2, 0], dtype=int64)"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.argsort(kor)[::-1][:3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "eac63d70",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([20, 30, 55, 60, 70, 90]),\n",
-       " array(['불합격', '불합격', '불합격', '불합격', '합격', '합격'], dtype='<U3'))"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "kor, np.where(kor>= 70, '합격', '불합격')"
    ]
   }
  ],
